--- a/Contact me.html
+++ b/Contact me.html
@@ -6,7 +6,15 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="Website CSS 2.css" rel="stylesheet" type="text/css">
   </head><body>
-    <footer class="section section-primary"> <div class="container"> <div class="row"> <div class="col-sm-6 col-md-12"> <h1 class="text-center">Contact Me!</h1> </div></div></div></footer>
+    <footer class="section section-primary">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 col-md-12">
+            <h1 class="text-center">Contact Me!</h1>
+          </div>
+        </div>
+      </div>
+    </footer>
     <div class="section">
       <div class="container">
         <div class="row">
@@ -17,11 +25,11 @@
             <h1 class="text-center">
               <br>
               <br>Isabel Strachan</h1>
-            <p>
-              </p><p class="lead text-center">1600 Pennsylvania Avenue NW
-                <br>Washington, DC 20500
-                <br>photos@isabelstrachan.com
-                <br>(123)-456-7890</p>
+            <p></p>
+            <p class="lead text-center">1600 Pennsylvania Avenue NW
+              <br>Washington, DC 20500
+              <br>photos@isabelstrachan.com
+              <br>(123)-456-7890</p>
             <p></p>
           </div>
         </div>
@@ -29,7 +37,9 @@
     </div>
     <div class="section">
       <div class="container">
-        <div class="row"><div class="col-md-12"><form role="form">
+        <div class="row">
+          <div class="col-md-12">
+            <form role="form">
               <div class="form-group">
                 <label class="control-label" for="exampleInputEmail1">Name</label>
                 <input class="form-control" id="exampleInputEmail1" placeholder="Enter Full Name" type="email">
@@ -43,20 +53,39 @@
                 <input class="form-control" id="exampleInputPassword1" placeholder="?" type="password">
               </div>
               <button type="submit" class="btn btn-default">Submit</button>
-            </form></div></div><div class="row">
-          <div class="col-md-6">
-            
+            </form>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6"></div>
+        </div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-xs-3 text-center">
+            <a href="https://www.instagram.com/isabel.strachan.photo/"><i class="fa fa-3x fa-fw fa-instagram"></i></a>
+          </div>
+          <div class="col-xs-3">
+            <a href="https://www.twitter.com/"><i class="fa fa-3x fa-fw fa-twitter"></i></a>
+          </div>
+          <div class="col-xs-3">
+            <a href="https://www.facebook.com/"><i class="fa fa-3x fa-facebook fa-fw"></i></a>
+          </div>
+          <div class="col-xs-3 text-center">
+            <a href="https://www.github.com/"><i class="fa fa-3x fa-fw fa-github"></i></a>
           </div>
         </div>
       </div>
-    </div><div class="section"> <div class="container"> <div class="row text-center"> <div class="col-xs-3 text-center"> <a href="https://www.instagram.com/isabel.strachan.photo/"><i class="fa fa-3x fa-fw fa-instagram"></i></a> </div><div class="col-xs-3"> <a href="https://www.twitter.com/"><i class="fa fa-3x fa-fw fa-twitter"></i></a> </div><div class="col-xs-3"> <a href="https://www.facebook.com/"><i class="fa fa-3x fa-facebook fa-fw"></i></a> </div><div class="col-xs-3 text-center"> <a href="https://www.github.com/"><i class="fa fa-3x fa-fw fa-github"></i></a> </div></div></div></div>
-  <div class="section section-primary">
+    </div>
+    <div class="section section-primary">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <ul class="lead nav nav-justified nav-pills">
               <li class="active">
-                <a href="Home Page.html">HOME</a>
+                <a href="index.html">HOME</a>
               </li>
               <li class="active">
                 <a href="Photos.html">PHOTOS</a>
