--- a/Photos.html
+++ b/Photos.html
@@ -35,7 +35,7 @@
           <div class="col-md-12">
             <ul class="lead nav nav-justified nav-pills">
               <li class="active">
-                <a href="Home Page.html">HOME</a>
+                <a href="index.html">HOME</a>
               </li>
               <li class="active">
                 <a href="Photos.html">PHOTOS</a>
