--- a/Photos.html
+++ b/Photos.html
@@ -6,29 +6,7 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="website CSS.css" rel="stylesheet" type="text/css">
   </head><body>
-    <div class="section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div id="fullcarousel-example" data-interval="false" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="active item">
-                  <img src="file:///Users/Belle/Desktop/HTML2/jpg/DSC_5897.jpg">
-                </div>
-                <div class="active item">
-                  <img src="file:///Users/Belle/Desktop/HTML2/jpg/DSC_5854.jpg">
-                </div>
-                <div class="active item">
-                  <img src="file:///Users/Belle/Desktop/HTML2/jpg/DSC_5431.jpg">
-                </div>
-              </div>
-              <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"><i class="icon-prev fa fa-angle-left"></i></a>
-              <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"><i class="icon-next fa fa-angle-right"></i> </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="section"><div class="container"><div class="row"><div class="col-md-12"><img src="jpg/DSC_5854.jpg" class="img-responsive"></div></div></div></div><div class="section"><div class="container"><div class="row"><div class="col-md-12"><img src="jpg/DSC_5897.jpg" class="img-responsive"></div></div></div></div><div class="section"><div class="container"><div class="row"><div class="col-md-12"><img src="jpg/DSC_5431.jpg" class="img-responsive"></div></div></div></div>
     <div class="section section-primary">
       <div class="container">
         <div class="row">
