--- a/Contact me.html
+++ b/Contact me.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="file:///Users/Belle/Desktop/HTML2/jpg/IMG_4033.jpg" class="img-circle img-responsive">
+            <img src="jpg/IMG_4033.jpg" class="img-circle img-responsive">
           </div>
           <div class="col-md-6">
             <h1 class="text-center">
@@ -55,9 +55,6 @@
               <button type="submit" class="btn btn-default">Submit</button>
             </form>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6"></div>
         </div>
       </div>
     </div>
