--- a/Photos.html
+++ b/Photos.html
@@ -4,9 +4,32 @@
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="website CSS.css" rel="stylesheet" type="text/css">
+    <link href="Photos CSS.css" rel="stylesheet" type="text/css">
   </head><body>
-    <div class="section"><div class="container"><div class="row"><div class="col-md-12"><img src="jpg/DSC_5854.jpg" class="img-responsive"></div></div></div></div><div class="section"><div class="container"><div class="row"><div class="col-md-12"><img src="jpg/DSC_5897.jpg" class="img-responsive"></div></div></div></div><div class="section"><div class="container"><div class="row"><div class="col-md-12"><img src="jpg/DSC_5431.jpg" class="img-responsive"></div></div></div></div>
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <img src="jpg/DSC_5854.jpg" class="center-block img-responsive img-thumbnail">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <img src="jpg/DSC_5232.jpg" class="center-block img-responsive img-thumbnail">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <img src="jpg/DSC_5203.jpg" class="center-block img-responsive img-thumbnail">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <img src="jpg/DSC_5431.jpg" class="center-block img-responsive img-thumbnail">
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="section section-primary">
       <div class="container">
         <div class="row">
