--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <h1>Isabel Strachan Photography</h1>
-            <p class="lead">Fine Arts Photographer
+            <p>Fine Arts Photographer
               <br>Washington, D.C.</p>
             <p></p>
             <p class="text-inverse"></p>
